<resources>
    <string name="app_name">Uber</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_cadastro">Cadastrar uma conta</string>
    <string name="title_login">Acessar minha conta</string>
    <string name="entrar">Entrar</string>
    <string name="passageiro">Passageiro</string>
    <string name="motorista">Motorista</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
</resources>